syntax = "proto3";

package address;

// All that you need for identifying an address is the strkey representation
message Address {
  string str_key = 1;
}